[package]
name = "acme_commander"
version = "0.1.1"
edition = "2024"
authors = ["0ldm0s <oldmos@gmail.com>"]
description = "一个全面的ACME客户端，用于SSL/TLS证书管理"
repository = "https://github.com/0ldm0s/acme_commander"
homepage = "https://github.com/0ldm0s/acme_commander"
documentation = "https://github.com/0ldm0s/acme_commander"
keywords = ["acme", "ssl", "tls", "certificate", "letsencrypt"]
categories = ["cryptography", "web-programming", "command-line-utilities"]
readme = "README.md"
license = "LGPL-3.0"

[[bin]]
name = "acme-commander"
path = "src/main.rs"

[lib]
name = "acme_commander"
path = "src/lib.rs"

[dependencies]
# 命令行界面
clap = { version = "4.4", features = ["derive", "env"] }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# JSON序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 加密相关
ring = "0.17"
p384 = { version = "0.13", features = ["ecdsa", "pem"] }
ecdsa = { version = "0.16", features = ["pem"] }
sha2 = "0.10"
hmac = "0.12"

# Base64编码
base64 = "0.21"

# URL处理
url = "2.4"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }

# 随机数生成
rand = "0.8"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志记录(使用rat_logger)
rat_logger = { path = "../rat_logger" }

# 配置管理
toml = "0.8"
serde_yaml = "0.9"

# 文件系统操作
tempfile = "3.8"

# DNS解析 (使用rat_quickdns)
rat_quickdns = { path = "../rat_quickdns" }

# 证书解析
x509-parser = "0.15"
der-parser = "8.2"
rcgen = "0.12"
webpki = "0.22"

# PEM格式处理
pem = "3.0"

# 正则表达式
regex = "1.10"

# UUID生成
uuid = { version = "1.6", features = ["v4"] }

# 速率限制
tokio-util = { version = "0.7", features = ["time"] }
governor = "0.6"

# 安全处理
secrecy = { version = "0.8", features = ["serde"] }

# 异步trait
async-trait = "0.1"

# 终端交互
dialoguer = "0.11"
console = "0.15"

# 进度条显示
indicatif = "0.17"

# 十六进制编码
hex = "0.4"

# 目录操作
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.5"
rstest = "0.18"
proptest = "1.4"

[features]
default = ["cloudflare", "manual"]
cloudflare = []
manual = []
zerossl = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
